# YoutubeDownloader

./: README.md
Source/: CMakeLists.txt
Source/cmake/: compilers_specifics.cmake  sfml.cmake
Source/src/: CMakeLists.txt  main.cpp
